fix: fixed overlap caused by calc()

--- a/src/student/css/responsive.css
+++ b/src/student/css/responsive.css
@@ -6,6 +6,7 @@
 
 @media only screen and (min-width: 880px) {
   main {
+    height: calc(100vh - 130px);
     display: flex;
     justify-content: space-between;
     gap: 50px;
